--- a/metrics/shared/columns.yaml
+++ b/metrics/shared/columns.yaml
@@ -3,3 +3,6 @@ columns:
   - table_regexp: '^s(act|commits)$'
     tag: trepo_groups
     column: repo_group_name
+  - table_regexp: '^scompany_activity$'
+    tag: tcompanies
+    column: companies_name
