--- a/grafana/dashboards/homebrew/project-statistics.json
+++ b/grafana/dashboards/homebrew/project-statistics.json
@@ -15,8 +15,8 @@
   "editable": true,
   "gnetId": null,
   "graphTooltip": 0,
-  "id": 4,
-  "iteration": 1527062736317,
+  "id": 5,
+  "iteration": 1534950792605,
   "links": [],
   "panels": [
     {
@@ -169,6 +169,7 @@
         "query": "select value_s from gha_vars where name = 'full_name'",
         "refresh": 1,
         "regex": "",
+        "skipUrlSync": false,
         "sort": 0,
         "tagValuesQuery": "",
         "tags": [],
@@ -193,6 +194,7 @@
         "query": "select quick_ranges_name from tquick_ranges order by time",
         "refresh": 1,
         "regex": "",
+        "skipUrlSync": false,
         "sort": 0,
         "tagValuesQuery": "",
         "tags": [],
@@ -216,6 +218,7 @@
         "query": "select quick_ranges_suffix from tquick_ranges where quick_ranges_name = '[[period_name]]'",
         "refresh": 1,
         "regex": "",
+        "skipUrlSync": false,
         "sort": 0,
         "tagValuesQuery": "",
         "tags": [],
@@ -225,8 +228,7 @@
       },
       {
         "allValue": null,
-        "current": {
-        },
+        "current": {},
         "datasource": "psql",
         "hide": 0,
         "includeAll": false,
@@ -237,6 +239,7 @@
         "query": "select all_repo_group_name from tall_repo_groups order by 1",
         "refresh": 1,
         "regex": "",
+        "skipUrlSync": false,
         "sort": 0,
         "tagValuesQuery": "",
         "tags": [],
@@ -246,8 +249,7 @@
       },
       {
         "allValue": null,
-        "current": {
-        },
+        "current": {},
         "datasource": "psql",
         "hide": 2,
         "includeAll": false,
@@ -258,6 +260,7 @@
         "query": "select all_repo_group_value from tall_repo_groups where all_repo_group_name = '[[repogroup_name]]'",
         "refresh": 1,
         "regex": "",
+        "skipUrlSync": false,
         "sort": 0,
         "tagValuesQuery": "",
         "tags": [],
@@ -300,5 +303,5 @@
   "timezone": "",
   "title": "Project statistics",
   "uid": "18",
-  "version": 5
+  "version": 2
 }
