--- a/metrics/shared/tags.yaml
+++ b/metrics/shared/tags.yaml
@@ -14,3 +14,7 @@ tags:
     sql: companies_tags
     series_name: companies
     name_tag: companies_name
+  - name: Users
+    sql: users_tags
+    series_name: users
+    name_tag: users_name
