--- a/devel/test_tags.yaml
+++ b/devel/test_tags.yaml
@@ -1,6 +1,7 @@
 ---
 tags:
-  - name: Users
-    sql: users_tags
-    series_name: users
-    name_tag: users_name
+  - name: GitHub event types
+    sql: event_types_tags
+    series_name: event_types
+    name_tag: event_type_name
+    value_tag: event_type_value
