--- a/metrics/shared/metrics.yaml
+++ b/metrics/shared/metrics.yaml
@@ -35,6 +35,13 @@ metrics:
     skip: h7,w7,m7,q7,y7,d24,w24,m24,q24,y24
     multi_value: true
     merge_series: user_activity
+  - name: GitHub events
+    series_name_or_func: multi_row_single_column
+    sql: event_types
+    periods: h,d,w,m,q,y
+    aggregate: 1,7,24
+    skip: h7,w7,m7,q7,y7,d24,w24,m24,q24,y24
+    multi_value: true
   - name: GitHub activity
     series_name_or_func: events_h
     sql: events
