--- a/metrics/shared/tags.yaml
+++ b/metrics/shared/tags.yaml
@@ -18,3 +18,8 @@ tags:
     sql: users_tags
     series_name: users
     name_tag: users_name
+  - name: GitHub event types
+    sql: event_types_tags
+    series_name: event_types
+    name_tag: event_type_name
+    value_tag: event_type_value
