Updated affiliations JSON
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/projects.yaml
+++ b/projects.yaml
@@ -12,3 +12,4 @@ projects:
     main_repo: 'Homebrew/brew'
     annotation_regexp: '^\d+\.\d+\.\d+$'
     files_skip_pattern: ''
+    # disabled: true
