--- a/metrics/shared/metrics.yaml
+++ b/metrics/shared/metrics.yaml
@@ -14,11 +14,12 @@ metrics:
     aggregate: 1,7,24
     skip: h7,w7,m7,q7,y7,d24,w24,m24,q24,y24
     multi_value: true
-  - name: Project stats
+  - name: Project statistics
     histogram: true
     annotations_ranges: true
     series_name_or_func: multi_row_single_column
     sql: project_stats
+    merge_series: pstat
   - name: Companies stats
     series_name_or_func: multi_row_multi_column
     sql: company_activity
